window.getMatchedCSSRules() not supporting pseudo element https://bugs.webkit.org/show_bug.cgi?id=72930

Patch by Naveen Bobbili <qghc36@motorola.com> on 2011-11-30
Reviewed by Darin Adler.

Added functionality to retrieve CSS rules of psuedo elements using
getMatchedCSSRules.

Source/WebCore:

Test: fast/dom/Window/getMatchedCSSRules-with-pseudo-elements.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::getMatchedCSSRules):
Retreiving CSS Rules of the appropriate pseudo element.

LayoutTests:

* fast/dom/Window/getMatchedCSSRules-with-pseudo-elements-expected.txt: Added.
* fast/dom/Window/getMatchedCSSRules-with-pseudo-elements.html: Added.

Canonical link: https://commits.webkit.org/90059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101587 268f45cc-cd09-0410-ab3c-d52691b4dbfc